# stringprocess

./: CHANGES  PROCESSORS.md  README  README.md  setup.cfg
scripts/: PROCESSORS.in  processors.py
src/stringprocess/processors/: registry.py  removers.py
tests/: test_basic.py
