[metadata]
name = stringprocess
version = 1.0
description = string formatting, normalization and validation utilities
long_description = file: README, CHANGELOG, LICENSE

author = Petri Savolainen
author_email = petri@koodaamo.fi

keywords = string, transform, validation, normalization
license = GPLv3

url = https://github.com/koodaamo/stringprocess

classifiers =
    License :: OSI Approved :: GPLv3
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    cleanco
    unidecode

[options.packages.find]
where=src
